[tool.poetry]
    name        = "bell-avr-vmc-visual-module"
    version     = "0.1.0"
    description = "Tracking camera to MQTT module for Bell AVR"
    license     = "MIT"
    readme      = "README.md"
    homepage    = "https://github.com/bellflight/AVR-VMC-Visual-Module"
    authors     = ["Nathan Vaughn <nvaughn51@gmail.com>"]

[tool.poetry.dependencies]
    python             = ">=3.9,<3.13"
    loguru             = "0.7.2"
    bell-avr-libraries = "0.2.0a7"
    transforms3d       = "0.4.1"
    numpy              = "1.26.1"
    nptyping           = "2.5.0"

[tool.poetry.group.dev.dependencies]
    pre-commit  = "3.5.0"
    pytest-cov  = "4.1.0"
    pytest      = "7.4.3"
    pytest-mock = "3.12.0"

[tool.pyright]
    typeCheckingMode           = "basic"
    venvPath                   = "."
    venv                       = ".venv"
    reportMissingParameterType = true

[tool.pytest.ini_options]
    # for nptyping
    filterwarnings = "ignore::DeprecationWarning"
